crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__tests__alias_ctor.snap
---
source: crates/alder-parse/src/pattern/mod.rs
description: Some(x) as opt
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 15,
        },
    },
    value: Alias {
        pattern: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 8,
                },
            },
            value: Ctor {
                path: Path {
                    segments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 1,
                                },
                                end: Position {
                                    line: 1,
                                    column: 5,
                                },
                            },
                            value: "Some",
                        },
                    ],
                },
                args: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 6,
                            },
                            end: Position {
                                line: 1,
                                column: 7,
                            },
                        },
                        value: Var(
                            "x",
                        ),
                    },
                ],
            },
        },
        name: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 12,
                },
                end: Position {
                    line: 1,
                    column: 15,
                },
            },
            value: "opt",
        },
    },
}
