crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__tests__alias_simple.snap
---
source: crates/alder-parse/src/pattern/mod.rs
description: x as y
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 7,
        },
    },
    value: Alias {
        pattern: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 2,
                },
            },
            value: Var(
                "x",
            ),
        },
        name: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 6,
                },
                end: Position {
                    line: 1,
                    column: 7,
                },
            },
            value: "y",
        },
    },
}
