crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__tests__bigint.snap
---
source: crates/alder-parse/src/pattern/mod.rs
description: 123n
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 5,
        },
    },
    value: BigInt(
        "123",
    ),
}
