crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__tests__bool_true.snap
---
source: crates/alder-parse/src/pattern/mod.rs
description: "true"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 5,
        },
    },
    value: Bool(
        true,
    ),
}
